# trading-platform

./: README.md
Trading-Platform/: .env.example  .gitattributes  .gitignore  README.md  app.py  config.py  docker-compose.yml  enums.py  pyproject.toml
Trading-Platform/core/: exceptions.py  middleware.py  security.py
Trading-Platform/migrations/versions/: 5d3d32b880d4_initial_schema.py
Trading-Platform/models/: account.py  ledger_entry.py  market_price.py  order.py  position.py  risk_check.py  user.py
Trading-Platform/pipeline/: binance_feed_producer.py  fill_consumer.py  orderbook_feed_producer.py  wal_producer.py
Trading-Platform/risk_engine_cpp/: CMakeLists.txt
Trading-Platform/risk_engine_cpp/docs/: risk_engine_reference.html  trading_proto_reference.html
Trading-Platform/risk_engine_cpp/proto/: trading.proto
Trading-Platform/risk_engine_cpp/src/: main.cpp  order_book.cpp  order_book.hpp  price_store.cpp  price_store.hpp  trading_service.cpp  trading_service.hpp  user_state_store.cpp  user_state_store.hpp  wal_writer.cpp  wal_writer.hpp
Trading-Platform/routes/: auth_routes.py  market_routes.py  order_routes.py  portfolio_routes.py
Trading-Platform/schemas/: auth_schemas.py
Trading-Platform/services/: auth_service.py  order_service.py  risk_engine_client.py  trading_pb2.py  trading_pb2_grpc.py
Trading-Platform/tests/integration/: test_market_routes.py  test_order_routes.py  test_portfolio_routes.py
