[tool.poetry]
name = "trading-platform"
version = "0.1.0"
description = "Paper trading engine with limit order book and C++ risk engine"
authors = ["Ishaan-k007"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-jwt-extended = "^4.6"
flask-bcrypt = "^1.0"
flask-sqlalchemy = "^3.1"
flask-migrate = "^4.0"
flask-limiter = "^3.5"
marshmallow = "^3.21"
psycopg2-binary = "^2.9"
apscheduler = "^3.10"
sortedcontainers = "^2.4"
structlog = "^24.1"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-flask = "^1.3"
hypothesis = "^6.100"
black = "^24.0"
mypy = "^1.9"
locust = "^2.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
